# desafio-backend-sistema-de-gerenciamento-de-voluntarios

./: .gitignore  Dockerfile  README.md  Readme.MD  database.py  main.py  openapi.yaml  pyproject.toml  test_main.py
models/: volunteer.py
repositories/: volunteer.py
routes/: volunteer.py
services/: volunteer.py
src/: database.py  main.py
src/models/: voluntario.py  volunteer.py
src/repositories/: volunteer.py
src/routes/: volunteer.py
src/services/: volunteer.py
